--- a/index.html
+++ b/index.html
@@ -1,2 +1,84 @@
-hello 
-个人主页
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>我的HTML！</title>
+
+
+    <!--  //标题（Heading）是通过 <h1> - <h6> 等标签进行定义的 -->
+</head>
+<h1>This is a heading</h1>
+<h2>This is a heading</h2>
+<h3>This is a heading</h3>
+
+
+<!-- //段落是通过 <p> 标签定义的  -->
+<p>This is a paragraph</p>
+
+<hr /><!-- //水平线！ -->
+
+<p>This is a paragraph</p>
+<hr />
+<p>This is a paragraph</p>
+
+<!--在不产生一个新段落的情况下进行换行（新行），请使用 <br /> 标签-->
+<p>This is <br \>a paragraph<br \>with line break </p>
+
+<!-- 这是注释！ -->
+<!-- 浏览器不会显示注释，但是能够帮助记录您的 HTML 文档。 -->
+
+<!--background-color 属性为元素定义了背景颜色-->
+<body style="background-color:yellow">
+
+<!-- onclick 表示点击事件  -->
+<!-- alert() 是JavaScript语言提供的一个警告函数，
+     它可以接受任意函数，参数就是警告框的函数信息。-->
+<button onclick= "alert('胖胖!')"> 按钮 </button>
+
+
+<h2 style="background-color:red">This is a heading</h2>
+<p style="background-color:green">This is a paragraph.</p>
+
+<!--font-family、color 以及 font-size 属性分别定义元素中文本的字体系列、颜色和字体尺寸-->
+<h1 style="font-family:verdana">A heading</h1>
+<p style="font-family:arial;color:red;font-size:20px;">A paragraph.</p>
+
+<!--text-align 属性规定了元素中文本的水平对齐方式-->
+<h1 style="text-align:center">This is a heading</h1>
+<p>The heading above is aligned to the center of this page.</p>
+
+
+<!--定义粗体文本-->
+<b>This text is bold</b>
+<hr />
+
+<!--定义大号字。-->
+<big>This text is big</big>
+<!--定义小号字。-->
+<br />
+<small>This text is small</small>
+<hr />
+
+<!--定义斜体字。-->
+<i>This text is italic</i>
+<hr />
+
+<!--定义下标字-->
+This text contains
+<sub>subscript</sub>
+<br />
+<!--定义下标字-->
+This text contains
+<sup>superscript</sup>
+<hr />
+
+<!--引用-->
+<p>浏览器通常会在 q 元素周围包围引号。</p>
+<p>WWF 的目标是 <q>构建人与自然和谐相处的世界。</q></p>
+<hr />
+
+
+
+</body>
+</html>
